img path changed

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <section>
 <div class="navbar">
-    <img src="/Webpage/img/lobe.jpg" alt="Logo" class="logo"> <!-- Replace "your-logo.png" with your logo's URL -->
+    <img src="./img/lobe.jpg" alt="Logo" class="logo"> <!-- Replace "your-logo.png" with your logo's URL -->
     <a href="#">Overview</a>
-    <a href="#">Example</a>
+    <a href="#">Examples</a>
     <a href="#">Tour</a>
     <a href="#">Blog</a>
     <a href="#">Help</a>
