img path changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section>
 <div class="navbar">
-    <img src="./img/lobe.jpg" alt="Logo" class="logo"> <!-- Replace "your-logo.png" with your logo's URL -->
+    <img src="./images/lobe.jpg"alt="Logo" class="logo"> <!-- Replace "your-logo.png" with your logo's URL -->
     <a href="#">Overview</a>
     <a href="#">Examples</a>
     <a href="#">Tour</a>
