--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="#">Tour</a>
     <a href="#">Blog</a>
     <a href="#">Help</a>
-    <button id="download">Download</a></button>
+    <button id="download">Download</button>
 </div>
 </section>
 <section>
@@ -36,14 +36,14 @@
     </div>
     <div class="text">
         <h1 class="head2">Train your app <br> with Lobe </h1>
-        <button id="download" class="button2">Download</button>
+        <button class="button2">Download</button>
         </div>
 </section>
 
     <section>
         <footer class="footer">
                 <div class="footer1">
-                    <h1><img class="logo" src="./img/lobe.jpg" alt=""></h1>
+                    <h1><img class="logo" src="./images/lobe.jpg" alt=""></h1>
                     <br>
                     <br>
                     <p>A product by micorsoft</p>
